# ATS-Resume-Score-Checker

./: README.md  app.py  requirements.txt
.devcontainer/: devcontainer.json
ATS-score-checker/: app.py  hello.py  pyproject.toml
ATS-score-checker/modules/: llm_handler.py  parser.py  scorer.py  utils.py
modules/: __init__.py
