[project]
name = "genai-ats"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docx2txt>=0.9",
    "google-generativeai>=0.8.5",
    "groq>=0.22.0",
    "openai>=1.75.0",
    "pypdf>=5.4.0",
    "python-dotenv>=1.1.0",
    "streamlit-extras>=0.6.0",
    "streamlit>=1.44.1",
    "nltk>=3.9.1",
    "seaborn>=0.13.2",
    "plotly>=6.0.1",
]
